# news_mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: python-ai-cursor-rules.mdc
news_mcp/: __init__.py  cli.py  server.py
